--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -80,7 +80,7 @@ path = grafana.db
 #################################### Session ####################################
 [session]
 # Either "memory", "file", "redis", "mysql", "postgres", default is "file"
-;provider = file
+provider = memory
 
 # Provider config options
 # memory: not have any config yet
@@ -129,7 +129,7 @@ admin_password = root
 ;secret_key = SW2YcwTIb9zpOOhoPsMm
 
 # Auto-login remember days
-;login_remember_days = 7
+login_remember_days = 7
 ;cookie_username = grafana_user
 ;cookie_remember_name = grafana_remember
 
@@ -160,7 +160,7 @@ cookie_samesite = Lax
 #################################### Users ####################################
 [users]
 # disable user signup / registration
-;allow_sign_up = true
+allow_sign_up = true
 
 # Allow non admin users to create organizations
 ;allow_org_create = true
