--- a/supervisord/supervisord.conf
+++ b/supervisord/supervisord.conf
@@ -13,3 +13,6 @@ command = bash -c "/usr/bin/chronograf start --port=8083"
 priority = 3
 command = /usr/sbin/grafana-server --homepath=/usr/share/grafana --pidfile=/var/run/grafana-server.pid --config=/etc/grafana/grafana.ini --packaging=deb cfg:default.paths.provisioning=/etc/grafana/provisioning cfg:default.paths.data=/var/lib/grafana cfg:default.paths.logs=/var/log/grafana cfg:default.paths.plugins=/var/lib/grafana/plugins cfg:default.paths.logs=/var/log/grafana
 
+[program:kapacitor]
+priority = 4
+command = /usr/bin/kapacitord -pidfile /var/run/kapacitor/kapacitor.pid -config /etc/kapacitor/kapacitor.conf
